Valentins rough draft

--- a/resume.tex
+++ b/resume.tex
@@ -82,25 +82,20 @@
 %----------HEADING-----------------
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- \href 1647-284-8025 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
-& \href{www.github.com/mershab99}{github.com/mershab99}\\
+  \textbf{{\Huge Valentin Di Lucca}} & \href{mailto:valentin@gmail.com}{valentin@gmail.com}\\
+ \href 1555-555-5555 &\href{www.linkedin.com/in/valentin}{linkedin.com/in/valentin-di-lucca}\\
+& \href{www.github.com/valentin}{github.com/valentin}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
 
 
 %--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
+\section{Skills}
   \resumeItemListStart
-  	\resumeItem{Languages/Databases}
-  	{: Python, Java, C\#, Linux Shell, YAML,  MongoDB, SQL, InfluxDB, Redis}
-   	\resumeItem{Frameworks/APIs/Tools}
-   	{: RabbitMQ, Flask, WebRTC, Dropwizard, Django, JSON, Maven}
-   	\resumeItem{IDE/OS}{: CentOS (Rocky Linux), Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
-  	\resumeItem{Dev Ops}
-  	{: AWS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
-      	\resumeItem{AI/Analytics}
-  	{: Tensorflow, Pytorch, Darknet, Grafana, Graylog}
+  	\resumeItem{Programming Skills}
+  	{: Python, Java, Matlab}
+   	\resumeItem{Engineering Software}
+   	{: CAD, Creo, Solidworks}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -108,37 +103,11 @@
 \section{Experience}
   \resumeSubHeadingListStart
 	\resumeSubheading
-	{Praizl Inc.}{Richmond Hill, ON - Remote}
-	{Full-Stack Software Engineer}{July 2020 - June 2021}
+	{Stores Di Lucca}{La Seyne Sur Mer}
+	{Administrative Clerk}{July 2020 - June 2021}
 		\resumeItemListStart
 			\resumeItem{}
-			{Engineered python based ML recommendations engine using geospatial, demographic, and qualitative data sets to match users to homes}
-			\resumeItem{}
-			{Provided business intelligence through engineered REST API's using Flask and Dropwizard}
-			\resumeItem{}
-			{Engineered data access layer in Python and Java to enable analytics on a MongoDB data lake.}
-			\resumeItem{}
-			{Reduced query times by 85\% by implementing an memory caching layer using Redis.}
-			\resumeItem{}
-			{Designed asynchronous job scheduler in Python and Java to mitigate expensive HTTP requests}
-			\resumeItem{}
-			{Managed AWS EC2 micro-service containerized deployment infrastructure. }
-			\resumeItem{}
-			{Brought code base to 80\% unit test coverage on critical algorithms. }
-			\resumeItem{}
-			{Worked in Agile teams on a Feature-by-Feature basis using SCRUM organizational tools }
-			\resumeItem{}
-			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers }
-		\resumeItemListEnd
-	    \resumeSubheading
-	      {Founderbyte}{Richmond Hill, ON}
-	      {Full-Stack Software Engineer}{January 2021 - June 2021}
-	      \resumeItemListStart
-		  \resumeItem{Engineered General Purpose Mail Service API}\newline
-	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
-	        \resumeItem{Deployed Websites} \newline
-	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
-  
+			{Improved team organization and management processes to streamline customer}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -147,40 +116,37 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {University of Ottawa}{Ottawa, ON}
-      {BSc. Honours Computer Science}{September 2017 - Current}
+      {ENSMM : Graduate Institute of Mechanical
+	   Engineering and Microtechnology}{Ottawa, ON}
+      {Mechanical Engineering}{September 2018 - Current}
 	\resumeItemListStart
 		\resumeItem{Notable Courses }
-		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
-	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}	
-%		\resumeItem{Sports}
-%		{Captain of the UOttawa Dota 2 B Team}
+		{ Mechanics, CAD, Electrical Engineering, Automation}
 	\resumeItemListEnd
-  \resumeSubHeadingListEnd
 
-
+	%
+	%\resumeSubheading
+    %  {Lycée privé Institution Sainte Marie La seyne sur mer Private high school : 
+	%  Ecole Nationale supérieure de Mécanique et des Microtechniques National Graduate Institute of Mechanical Engineering and Microtechnology}{Ottawa, ON}
+    %  {High School}{September 2015 - July 2019}
+	%\resumeItemListStart
+	%	\resumeItem{Notable Courses }
+	%	{ Mechanics, CAD, Electrical Engineering, Automation}
+	%\resumeItemListEnd
+	%\resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
 	\resumeSubheading
-	{Uottahack 4}{Ottawa, ON - Online}
-	{Team Winner - Best Hardware Hack}{February 2021}
+	{AI Game Guesser}{La Seyne Sur Mer}
+	{IDK WHAT THIS DOES}{When the dinosaurs were made}
 		\resumeItemListStart
 			\resumeItem{}
-			{Sanitation Station Companion: https://devpost.com/software/sanitation-station-companion}
-      \resumeItem{}
-      {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
+			{DUMMY DESCRIPTION HERE}
 		\resumeItemListEnd
-\resumeSubheading
-	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
-	{Team Hackathon Competitor - 3rd Place }{May 2016}
-		\resumeItemListStart
-			\resumeItem{}
-			{Developed a user focused carbon credit Android application with a SQL backend within 24 hours.}
-		\resumeItemListEnd
-    
+\resumeSubHeadingListEnd
+
 %	\resumeSubheading
 %	{YRDSB QUEST 2016}{Richmond Hill, ON}
 %	{Engineering Team Lead}{May 2016}
@@ -203,7 +169,6 @@
 %			\resumeItem{General}
 %			{Worked in interdisciplinary groups to create electronics backed art installations using Raspberry PI and Makey Makey's. .}
 %		\resumeItemListEnd
-  \resumeSubHeadingListEnd
 
 %---------REFERENCES--------
 %\section{References}
@@ -215,8 +180,14 @@
 \section{Hobbies}
 	\resumeSubHeadingListStart
 	\item{
-	\textbf{}{Homelab, Fitness, E-Sports (Dota 2), Martial Arts, Electronics}
+	\textbf{}{Chess, volleyball team captain, RTS Video games}
 	}
 	\resumeSubHeadingListEnd
   
+\section{Languages}
+	\resumeSubHeadingListStart
+	\item{
+	\textbf{}{French(high), English(High), Italian(Moderate), Japanese(Learning), Chinese(Learning)}
+	}
+	\resumeSubHeadingListEnd
 \end{document}
