--- a/resume.tex
+++ b/resume.tex
@@ -1,8 +1,3 @@
-%-------------------------
-% Resume in Latex
-% Author : Sourabh Bajaj
-% License : MIT
-%------------------------
 
 \documentclass[letterpaper,11pt]{article}
 
@@ -83,7 +78,7 @@
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Valentin Di Lucca}} & \href{mailto:valentin@gmail.com}{valentin@gmail.com}\\
- \href 1555-555-5555 &\href{www.linkedin.com/in/valentin}{linkedin.com/in/valentin-di-lucca}\\
+ \href +33 6 05 41 42 08 &\href{www.linkedin.com/in/valentin}{linkedin.com/in/valentin-di-lucca}\\
 & \href{www.github.com/valentin}{github.com/valentin}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
@@ -120,30 +115,28 @@
 	   Engineering and Microtechnology}{Ottawa, ON}
       {Mechanical Engineering}{September 2018 - Current}
 	\resumeItemListStart
-		\resumeItem{Notable Courses }
+		\resumeItem{Notable Courses}
 		{ Mechanics, CAD, Electrical Engineering, Automation}
+		\resumeItem{Member of MUSPACE}
+		{ Member of space ship engineering club. Aided in developing miniature spaceships using a variety of technologies}
 	\resumeItemListEnd
 
-	%
-	%\resumeSubheading
-    %  {Lycée privé Institution Sainte Marie La seyne sur mer Private high school : 
-	%  Ecole Nationale supérieure de Mécanique et des Microtechniques National Graduate Institute of Mechanical Engineering and Microtechnology}{Ottawa, ON}
-    %  {High School}{September 2015 - July 2019}
-	%\resumeItemListStart
-	%	\resumeItem{Notable Courses }
-	%	{ Mechanics, CAD, Electrical Engineering, Automation}
-	%\resumeItemListEnd
-	%\resumeSubHeadingListEnd
+	\resumeSubheading
+      {National Graduate Institute of Mechanical Engineering and Microtechnology}{La Seyne Sur Mer, ON}
+      {High School}{September 2015 - July 2019}
+	\resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
 	\resumeSubheading
 	{AI Game Guesser}{La Seyne Sur Mer}
-	{IDK WHAT THIS DOES}{When the dinosaurs were made}
+	{Java AI Game}{2019}
 		\resumeItemListStart
 			\resumeItem{}
-			{DUMMY DESCRIPTION HERE}
+			{Find the word AI Guessing Game}
+			\resumeItem{}
+			{Using a sorting algorithm to colour code letters and find the correct word.}
 		\resumeItemListEnd
 \resumeSubHeadingListEnd
 
