--- a/resume.tex
+++ b/resume.tex
@@ -78,9 +78,7 @@
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Valentin Di Lucca}} & \href{mailto:valentin@gmail.com}{valentin@gmail.com}\\
- \href +33 6 05 41 42 08 &\href{www.linkedin.com/in/valentin}{linkedin.com/in/valentin-di-lucca}\\
-& \href{www.github.com/valentin}{github.com/valentin}\\
-% & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
+ \href +33 6 05 41 42 08 &\href{https://www.linkedin.com/in/valentin-di-lucca}{https://www.linkedin.com/in/valentin-di-lucca}\\
 \end{tabular*}
 
 
