dad's base resume

--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Sourabh Bajaj
+% Author : Mershab Issadien
 % License : MIT
 %------------------------
 
@@ -82,25 +82,20 @@
 %----------HEADING-----------------
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- \href 1647-284-8025 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
-& \href{www.github.com/mershab99}{github.com/mershab99}\\
+  \textbf{{\Huge Sahib Arafat}} & \href{mailto:ysahib@gmail.com}{ysahib@gmail.com}\\
+ \href 1416-201-2268 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/sahib-a}\\
+%& \href{www.github.com/mershab99}{github.com/mershab99}\\%
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
 
 
 %--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
+\section{Certifications}
   \resumeItemListStart
-  	\resumeItem{Languages/Databases}
-  	{: Python, Java, C\#, Linux Shell, YAML,  MongoDB, SQL, InfluxDB, Redis}
-   	\resumeItem{Frameworks/APIs/Tools}
-   	{: RabbitMQ, Flask, WebRTC, Dropwizard, Django, JSON, Maven}
-   	\resumeItem{IDE/OS}{: CentOS (Rocky Linux), Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
-  	\resumeItem{Dev Ops}
-  	{: AWS, GKS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
-      	\resumeItem{AI/Analytics}
-  	{: Tensorflow, Pytorch, Darknet, Grafana, Graylog}
+  	\resumeItem{Networking}
+  	{: Microsoft Certified System Engineer (MCSE), Cisco Certified Network Associate CCNA, }
+   	\resumeItem{Microsoft}
+   	{: Microsoft Certified Solution Developer (MCSD), Microsoft Certified Database Administrator (MCDBA), Microsoft Certified System Engineer (MCSE) –NT4, Microsoft Certified Professional + Internet (MCP+I)}
 \resumeItemListEnd
 %---------------------------------------------
 
@@ -108,8 +103,8 @@
 \section{Experience}
   \resumeSubHeadingListStart
 	\resumeSubheading
-	{Praizl Inc. - DMZ 2021}{Richmond Hill, ON}
-	{Full-Stack Software Engineer}{July 2020 - June 2021}
+	{TTM Technologies }{Toronto, ON}
+	{IT Manager}{June 2017 - Current}
 		\resumeItemListStart
       \resumeItem{}
       {Helped startup from infancy to DMZ Class of 2021}
@@ -146,76 +141,13 @@
 
 \resumeSubHeadingListEnd
 
-%-----------EDUCATION-----------------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {University of Ottawa}{Ottawa, ON}
-      {BSc. Honours Computer Science}{September 2017 - Current}
-	\resumeItemListStart
-		\resumeItem{Notable Courses }
-		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
-	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}
-%		\resumeItem{Sports}
-%		{Captain of the UOttawa Dota 2 B Team}
-	\resumeItemListEnd
-  \resumeSubHeadingListEnd
-
-
-
-%-----------PROJECTS-----------------
-\section{Projects}
-  \resumeSubHeadingListStart
-	\resumeSubheading
-	{Uottahack 4}{Ottawa, ON}
-	{Team Winner - Sanitation Station Companion}{February 2021}
-		\resumeItemListStart
-      \resumeItem{}
-      {Winner of Best Hardware Hack}
-      \resumeItem{}
-      {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
-      \resumeItem{}
-			{https://devpost.com/software/sanitation-station-companion}
-		\resumeItemListEnd
-\resumeSubheading
-	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
-	{Team Hackathon Competitor - 3rd Place }{May 2016}
-		\resumeItemListStart
-			\resumeItem{}
-			{Developed a user focused carbon credit Android application with a SQL backend within 24 hours.}
-		\resumeItemListEnd
-    
-%	\resumeSubheading
-%	{YRDSB QUEST 2016}{Richmond Hill, ON}
-%	{Engineering Team Lead}{May 2016}
-%		\resumeItemListStart
-%			\resumeItem{Leadership}
-%			{Lead a team of 3 tech/engineering students, performed requirement elicitation, communicated with other interdisciplinary teams and managed a project schedule to finish well within the timeline. }
-%			\resumeItem{Project Description}
-%			{Array of flowers that individually opened up based on proximity. Developed for mental health awareness.}
-%			\resumeItem{General}
-%			{Worked in interdisciplinary groups to create electronics backed art installations using Arduino and solenoids.}
-%		\resumeItemListEnd
-%	\resumeSubheading
-%	{YRDSB QUEST 2015}{Richmond Hill, ON}
-%	{Engineering Team Lead}{May 2015}
-%		\resumeItemListStart
-%			\resumeItem{Leadership}
-%			{Lead a team of 2 tech/engineering students and managed a project schedule to finish well within the timeline. }
-%			\resumeItem{Project Description}
-%			{Shevrons that when completed by a human circuit play sounds}
-%			\resumeItem{General}
-%			{Worked in interdisciplinary groups to create electronics backed art installations using Raspberry PI and Makey Makey's. .}
-%		\resumeItemListEnd
-  \resumeSubHeadingListEnd
 
 %---------REFERENCES--------
-%\section{References}
-%	\resumeSubHeadingListStart
-%		\resumeSubheading
-%		{Available Upon Request}{}{}{}
-%	\resumeSubHeadingListEnd
+\section{References}
+	\resumeSubHeadingListStart
+		\resumeSubheading
+		{Available Upon Request}{}{}{}
+	\resumeSubHeadingListEnd
   %----------HOBBIES
 \section{Hobbies}
 	\resumeSubHeadingListStart
