Update Resume with Nasdaq Exp

--- a/resume.tex
+++ b/resume.tex
@@ -83,8 +83,9 @@
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- \href 1647-284-8025 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
+ \href +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
+& \href{www.gitlab.com/mershab99}{gitlab.com/mershab99}\\
 % & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
 \end{tabular*}
 
@@ -93,22 +94,45 @@
 \section{Programming Skills}
   \resumeItemListStart
   	\resumeItem{Languages/Databases}
-  	{: Python, Java, C\#, Linux Shell, YAML,  MongoDB, SQL, InfluxDB, Redis}
+    {: Python, Java, C\#, Rust (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
    	\resumeItem{Frameworks/APIs/Tools}
-   	{: RabbitMQ, Flask, WebRTC, Dropwizard, Django, JSON, Maven}
-   	\resumeItem{IDE/OS}{: CentOS (Rocky Linux), Ubuntu, Pycharm, VS Code, Intellij, Linux Mint, KDE}
+   	{: Kafka, RabbitMQ, WebRTC, Helm, YAML, JSON}
+   	\resumeItem{Frameworks}
+    {: Faust(Streaming), FastAPI, Flask, Spring, Django, Maven}
+   	\resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
   	\resumeItem{Dev Ops}
-  	{: AWS, GKS, Git, VCS, Ansible, Docker, Kubernetes, Jenkins, Github Actions (CI/CD), Proxmox, Esxi}
+  	{: AWS, GKS, Gitlab, Ansible, Docker, Kubernetes, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
       	\resumeItem{AI/Analytics}
-  	{: Tensorflow, Pytorch, Darknet, Grafana, Graylog}
+  	{: Tensorflow, Pytorch, Grafana, Graylog, }
 \resumeItemListEnd
 %---------------------------------------------
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
+{Nasdaq Inc.}{Toronto, ON}
   \resumeSubHeadingListStart
+  {Backend Software Engineer}{September 2021 - August 2023}
 	\resumeSubheading
-	{Praizl Inc. - DMZ 2021}{Richmond Hill, ON}
+		\resumeItemListStart
+      \resumeItem{}
+      {Wrote High efficiency, high throughput, low-memory impact Java Spring Boot microservices.}
+      \resumeItem{}
+			{Worked with industry standard FIX Financial Protocol, as well as other Nasdaq Proprietary protocols.}
+      \resumeItem{}
+			{Worked closely with BA's and spec writer's to flesh out key business logic and functionality.}
+			\resumeItem{}
+      {Increased Code Test Coverage to 85\% and Improved Integration Test Framework}
+			\resumeItem{}
+			{Implemented Tailor Made Combinations and other key business logic pertaining the FIX protocol}
+			\resumeItem{}
+			{Handled Customer Issues from worldwide Stock Exchanges}
+			\resumeItem{}
+      {Influenced design of 24x7 and Snapshot Gateway Functionality, and implemented in a variety of gateways}
+			\resumeItem{}
+			{Active in SCRUM meetings, planning and all aspects of SDL. Worked In Agile Team.}
+      
+	\resumeSubheading
+	{Praizl Inc. - DMZ 2021}{Toronto, ON}
 	{Full-Stack Software Engineer}{July 2020 - June 2021}
 		\resumeItemListStart
       \resumeItem{}
@@ -128,19 +152,19 @@
 			\resumeItem{}
 			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers. In Agile teams using SCUM Methodology. }
       
-		\resumeItemListEnd
-	    \resumeSubheading
-	      {Founderbyte}{Richmond Hill, ON}
-	      {Full-Stack Software Engineer}{January 2021 - June 2021}
-	      \resumeItemListStart
-		  \resumeItem{}
-	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
-	        \resumeItem{}
-	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
-          \resumeItem{}
-          {Built online e-commerce store with scheduling system}
-          \resumeItem{}
-          {Integrated scheduling widgets into existing website platforms.}
+%		\resumeItemListEnd
+%	    \resumeSubheading
+%	      {Founderbyte}{Richmond Hill, ON}
+%	      {Full-Stack Software Engineer}{January 2021 - June 2021}
+%	      \resumeItemListStart
+%		  \resumeItem{}
+%	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
+%	        \resumeItem{}
+%	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
+%          \resumeItem{}
+%          {Built online e-commerce store with scheduling system}
+%          \resumeItem{}
+%          {Integrated scheduling widgets into existing website platforms.}
   
 \resumeItemListEnd
 
@@ -154,7 +178,7 @@
       {BSc. Honours Computer Science}{September 2017 - Current}
 	\resumeItemListStart
 		\resumeItem{Notable Courses }
-		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing, }
+		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
 	\resumeItem{Clubs/Projects }
 		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}
 %		\resumeItem{Sports}
@@ -177,8 +201,6 @@
       {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
       \resumeItem{}
 			{https://devpost.com/software/sanitation-station-companion}
-		\resumeItemListEnd
-\resumeSubheading
 	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
 	{Team Hackathon Competitor - 3rd Place }{May 2016}
 		\resumeItemListStart
@@ -216,6 +238,12 @@
 %		\resumeSubheading
 %		{Available Upon Request}{}{}{}
 %	\resumeSubHeadingListEnd
+%---------HOMELAB--------
+\section{Homelab}
+	\resumeSubHeadingListStart
+		\resumeSubheading
+		{I Made a thing}{Its a cool thing}{A rad thing}{ YO}
+	\resumeSubHeadingListEnd
   %----------HOBBIES
 \section{Hobbies}
 	\resumeSubHeadingListStart
