--- a/resume.tex
+++ b/resume.tex
@@ -21,6 +21,7 @@
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
 \fancyfoot{}
+\setlength{\footskip}{4.08003pt}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
@@ -42,7 +43,6 @@
   \vspace{-4pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
-%-------------------------
 % Custom commands
 \newcommand{\resumeItem}[2]{
   \item\small{
@@ -73,183 +73,329 @@
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
-%-------------------------------------------
 %%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \begin{document}
 
-%----------HEADING-----------------
+% HEADING
 \begin{tabular*}
 {\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
- \href +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
-& \href{www.github.com/mershab99}{github.com/mershab99}\\
-& \href{www.gitlab.com/mershab99}{gitlab.com/mershab99}\\
-% & GitHub : \href{www.github.com/mershab99}{www.github.com/mershab99}
+  +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
+  & \href{www.github.com/mershab99}{github.com/mershab99}\\
+  & \href{www.gitlab.com/mershab99}{gitlab.com/mershab99}\\
 \end{tabular*}
 
-
-%--------PROGRAMMING SKILLS------------
+% Programming Skills
 \section{Programming Skills}
-  \resumeItemListStart
-  	\resumeItem{Languages/Databases}
-    {: Python, Java, C\#, Rust (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
-   	\resumeItem{Frameworks/APIs/Tools}
-   	{: Kafka, RabbitMQ, WebRTC, Helm, YAML, JSON}
-   	\resumeItem{Frameworks}
-    {: Faust(Streaming), FastAPI, Flask, Spring, Django, Maven}
-   	\resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
-  	\resumeItem{Dev Ops}
-  	{: AWS, GKS, Gitlab, Ansible, Docker, Kubernetes, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
-      	\resumeItem{AI/Analytics}
-  	{: Tensorflow, Pytorch, Grafana, Graylog, }
-\resumeItemListEnd
-%---------------------------------------------
-
-%-----------EXPERIENCE-----------------
-  \section{Experience}
-  \resumeSubHeadingListStart
-	\resumeSubheading
-  {Nasdaq Inc.}{Toronto, ON}
-  {Backend Software Engineer}{September 2021 - August 2023}
-		\resumeItemListStart
-      \resumeItem{}
-      {Wrote High efficiency, high throughput, low-memory impact Java Spring Boot microservices.}
-      \resumeItem{}
-			{Worked with industry standard FIX Financial Protocol, as well as other Nasdaq Proprietary protocols.}
-      \resumeItem{}
-			{Worked closely with BA's and spec writer's to flesh out key business logic and functionality.}
-			\resumeItem{}
-      {Increased Code Test Coverage to 85\% and Improved Integration Test Framework}
-			\resumeItem{}
-			{Implemented Tailor Made Combinations and other key business logic pertaining the FIX protocol}
-			\resumeItem{}
-			{Handled Customer Issues from worldwide Stock Exchanges}
-			\resumeItem{}
-      {Influenced design of 24x7 and Snapshot Gateway Functionality, and implemented in a variety of gateways}
-			\resumeItem{}
-			{Active in SCRUM meetings, planning and all aspects of SDL. Worked In Agile Team.}
-      
-	\resumeSubheading
-	{Praizl Inc. - DMZ 2021}{Toronto, ON}
-	{Full-Stack Software Engineer}{July 2020 - June 2021}
-		\resumeItemListStart
-      \resumeItem{}
-      {Helped startup from infancy to DMZ Class of 2021}
-      \resumeItem{}
-			{Engineered ML recommendations engine using multiple data sets to accurately match users to their dream homes}
-			\resumeItem{}
-			{Provided business intelligence and user management through REST API's using Flask and Dropwizard}
-			\resumeItem{}
-			{Built insightful analytics framework on top of MongoDB datalake; used to process GB's of data.}
-			\resumeItem{}
-			{Reduced API response time to users by 90\% by implementing an asynchronous job scheduler and in memory caching layer using Redis}
-			\resumeItem{}
-			{Performed infrastructure level Dev-Ops work with containerized deployments on AWS EC2. }
-			\resumeItem{}
-			{Brought code base to 80\% unit test coverage on critical algorithms. }
-			\resumeItem{}
-			{Worked under direct supervision and collaborated with ex-Salesforce, ex-Uber, ex-Microsoft software engineers. In Agile teams using SCUM Methodology. }
-      
-%		\resumeItemListEnd
-%	    \resumeSubheading
-%	      {Founderbyte}{Richmond Hill, ON}
-%	      {Full-Stack Software Engineer}{January 2021 - June 2021}
-%	      \resumeItemListStart
-%		  \resumeItem{}
-%	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
-%	        \resumeItem{}
-%	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
-%          \resumeItem{}
-%          {Built online e-commerce store with scheduling system}
-%          \resumeItem{}
-%          {Integrated scheduling widgets into existing website platforms.}
-  
+\resumeItemListStart
+  \resumeItem{Languages/Databases}{: Python, Java, C\#, Rust (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
+  \resumeItem{Frameworks/APIs/Tools}{: Kafka, RabbitMQ, WebRTC, Helm, YAML, JSON}
+  \resumeItem{Frameworks}{: Faust(Streaming), FastAPI, Flask, Spring, Django, Maven}
+  \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
+  \resumeItem{Dev Ops}{: AWS, GKS, Gitlab, Ansible, Docker, Kubernetes, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
+  \resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog}
 \resumeItemListEnd
 
+% Experience
+\section{Experience}
+\resumeSubHeadingListStart
+  \resumeSubheading
+    {Nasdaq Inc.}{Toronto, ON}
+    {Backend Software Engineer}{September 2021 - August 2023}
+    \resumeItemListStart
+      \resumeItem{}
+      {Wrote high-efficiency, high-throughput, low-memory impact Java Spring Boot microservices.}
+      \resumeItem{}
+      {Worked with industry-standard FIX Financial Protocol and other Nasdaq proprietary protocols.}
+      \resumeItem{}
+      {Collaborated with business analysts and specification writers to develop key business logic.}
+      \resumeItem{}
+      {Increased code test coverage to 85\% and improved integration test framework.}
+      \resumeItem{}
+      {Implemented Tailor Made Combinations and other key business logic related to the FIX protocol.}
+      \resumeItem{}
+      {Handled customer issues from worldwide stock exchanges.}
+      \resumeItem{}
+      {Influenced the design of 24x7 and Snapshot Gateway Functionality and implemented in various gateways.}
+      \resumeItem{}
+      {Participated in SCRUM meetings, planning, and all aspects of the Software Development Lifecycle (SDL) within an Agile team.}
+    \resumeItemListEnd
+
+  \resumeSubheading
+  {Praizl Inc. - DMZ 2021}{Toronto, ON}
+  {Full-Stack Software Engineer}{July 2020 - June 2021}
+    \resumeItemListStart
+      \resumeItem{}
+      {Contributed to startup from its inception to the DMZ Class of 2021.}
+      \resumeItem{}
+      {Engineered an ML recommendations engine using multiple datasets to match users to their dream homes accurately.}
+      \resumeItem{}
+      {Provided business intelligence and user management through REST APIs using Flask and Dropwizard.}
+      \resumeItem{}
+      {Built an analytics framework on top of a MongoDB datalake used to process large amounts of data.}
+      \resumeItem{}
+      {Reduced API response time to users by 90\% by implementing an asynchronous job scheduler and in-memory caching layer using Redis.}
+      \resumeItem{}
+      {Performed infrastructure-level DevOps work with containerized deployments on AWS EC2.}
+      \resumeItem{}
+      {Achieved 80\% unit test coverage for critical algorithms.}
+      \resumeItem{}
+      {Collaborated in Agile teams using the Scrum methodology under the supervision of ex-Salesforce, ex-Uber, ex-Microsoft software engineers.}
+    \resumeItemListEnd
 \resumeSubHeadingListEnd
 
-%-----------EDUCATION-----------------
+% Education
 \section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {University of Ottawa}{Ottawa, ON}
-      {BSc. Honours Computer Science}{September 2017 - Current}
-	\resumeItemListStart
-		\resumeItem{Notable Courses }
-		{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
-	\resumeItem{Clubs/Projects }
-		{Uottawa CSME (Engineering Association). uOttawaCSME.ca; UOttawa Dota 2 B Team Captain}
-%		\resumeItem{Sports}
-%		{Captain of the UOttawa Dota 2 B Team}
-	\resumeItemListEnd
-  \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+  \resumeSubheading
+    {University of Ottawa}{Ottawa, ON}
+    {BSc. Honours Computer Science}{September 2017 - Current}
+    \resumeItemListStart
+      \resumeItem{Notable Courses}{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
+      \resumeItem{Clubs/Projects}{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
 
-
-
-%-----------PROJECTS-----------------
+% Projects
 \section{Projects}
-  \resumeSubHeadingListStart
-	\resumeSubheading
-	{Uottahack 4}{Ottawa, ON}
-	{Team Winner - Sanitation Station Companion}{February 2021}
-		\resumeItemListStart
+\resumeSubHeadingListStart
+  \resumeSubheading
+  {Uottahack 4}{Ottawa, ON}
+  {Team Winner - Sanitation Station Companion}{February 2021}
+    \resumeItemListStart
       \resumeItem{}
       {Winner of Best Hardware Hack}
       \resumeItem{}
       {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
       \resumeItem{}
-			{https://devpost.com/software/sanitation-station-companion}
-	{Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
-	{Team Hackathon Competitor - 3rd Place }{May 2016}
-		\resumeItemListStart
-			\resumeItem{}
-			{Developed a user focused carbon credit Android application with a SQL backend within 24 hours.}
-		\resumeItemListEnd
+      {https://devpost.com/software/sanitation-station-companion}
+    \resumeItemListEnd
     
-%	\resumeSubheading
-%	{YRDSB QUEST 2016}{Richmond Hill, ON}
-%	{Engineering Team Lead}{May 2016}
-%		\resumeItemListStart
-%			\resumeItem{Leadership}
-%			{Lead a team of 3 tech/engineering students, performed requirement elicitation, communicated with other interdisciplinary teams and managed a project schedule to finish well within the timeline. }
-%			\resumeItem{Project Description}
-%			{Array of flowers that individually opened up based on proximity. Developed for mental health awareness.}
-%			\resumeItem{General}
-%			{Worked in interdisciplinary groups to create electronics backed art installations using Arduino and solenoids.}
-%		\resumeItemListEnd
-%	\resumeSubheading
-%	{YRDSB QUEST 2015}{Richmond Hill, ON}
-%	{Engineering Team Lead}{May 2015}
-%		\resumeItemListStart
-%			\resumeItem{Leadership}
-%			{Lead a team of 2 tech/engineering students and managed a project schedule to finish well within the timeline. }
-%			\resumeItem{Project Description}
-%			{Shevrons that when completed by a human circuit play sounds}
-%			\resumeItem{General}
-%			{Worked in interdisciplinary groups to create electronics backed art installations using Raspberry PI and Makey Makey's. .}
-%		\resumeItemListEnd
-  \resumeSubHeadingListEnd
+  \resumeSubheading
+  {Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
+  {Team Hackathon Competitor - 3rd Place}{May 2016}
+    \resumeItemListStart
+      \resumeItem{}
+      {Developed a user-focused carbon credit Android application with a SQL backend within 24 hours.}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
 
-%---------REFERENCES--------
-%\section{References}
-%	\resumeSubHeadingListStart
-%		\resumeSubheading
-%		{Available Upon Request}{}{}{}
-%	\resumeSubHeadingListEnd
 %---------HOMELAB--------
 \section{Homelab}
-	\resumeSubHeadingListStart
-		\resumeSubheading
-		{I Made a thing}{Its a cool thing}{A rad thing}{ YO}
-	\resumeSubHeadingListEnd
-  %----------HOBBIES
-\section{Hobbies}
-	\resumeSubHeadingListStart
-	\item{
-	\textbf{}{Homelab, Fitness, E-Sports (Dota 2), Martial Arts, Electronics}
-	}
-	\resumeSubHeadingListEnd
-  
+\resumeSubHeadingListStart
+  \resumeSubheading
+  {I Made a Thing}{It's a Cool Thing}{A Rad Thing}{YO}
+    \resumeItemListStart
+      \resumeItem{}
+      {Bullet point 1 about your Homelab setup or projects.}
+      \resumeItem{}
+      {Bullet point 2 about your Homelab setup or projects.}
+      % Add more bullet points as needed
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
+
+
 \end{document}
+
+%-------------------------
+% Resume in Latex
+% Author : Sourabh Bajaj
+% License : MIT
+%------------------------
+
+\documentclass[letterpaper,11pt]{article}
+
+\usepackage{latexsym}
+\usepackage[empty]{fullpage}
+\usepackage{titlesec}
+\usepackage{marvosym}
+\usepackage[usenames,dvipsnames]{color}
+\usepackage{verbatim}
+\usepackage{enumitem}
+\usepackage[hidelinks]{hyperref}
+\usepackage{fancyhdr}
+\usepackage[english]{babel}
+\usepackage{tabularx}
+
+\pagestyle{fancy}
+\fancyhf{} % clear all header and footer fields
+\fancyfoot{}
+\setlength{\footskip}{4.08003pt}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+
+% Adjust margins
+\addtolength{\oddsidemargin}{-0.5in}
+\addtolength{\evensidemargin}{-0.5in}
+\addtolength{\textwidth}{1in}
+\addtolength{\topmargin}{-0.5in}
+\addtolength{\textheight}{0.75in}
+
+\urlstyle{same}
+
+\raggedbottom
+\raggedright
+\setlength{\tabcolsep}{0in}
+
+% Sections formatting
+\titleformat{\section}{
+  \vspace{-4pt}\scshape\raggedright\large
+}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
+
+% Custom commands
+\newcommand{\resumeItem}[2]{
+  \item\small{
+    \textbf{#1}{#2 \vspace{-2pt}}
+  }
+}
+
+\newcommand{\resumeSubheading}[4]{
+  \vspace{-1pt}\item
+    \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & #2 \\
+      \textit{\small#3} & \textit{\small #4} \\
+    \end{tabular*}\vspace{-5pt}
+}
+
+\newcommand{\resumeSubSubheading}[2]{
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textit{\small#1} & \textit{\small #2} \\
+    \end{tabular*}\vspace{-5pt}
+}
+
+\newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
+
+\renewcommand{\labelitemii}{$\circ$}
+
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+
+%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{document}
+
+% HEADING
+\begin{tabular*}
+{\textwidth}{l@{\extracolsep{\fill}}r}
+  \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
+  +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
+  & \href{www.github.com/mershab99}{github.com/mershab99}\\
+  & \href{www.gitlab.com/mershab99}{gitlab.com/mershab99}\\
+\end{tabular*}
+
+% Programming Skills
+\section{Programming Skills}
+\resumeItemListStart
+  \resumeItem{Languages/Databases}{: Python, Java, C\#, Rust (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
+  \resumeItem{Frameworks/APIs/Tools}{: Kafka, RabbitMQ, WebRTC, Helm, YAML, JSON}
+  \resumeItem{Frameworks}{: Faust(Streaming), FastAPI, Flask, Spring, Django, Maven}
+  \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
+  \resumeItem{Dev Ops}{: AWS, GKS, Gitlab, Ansible, Docker, Kubernetes, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
+  \resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog}
+\resumeItemListEnd
+
+% Experience
+\section{Experience}
+\resumeSubHeadingListStart
+  \resumeSubheading
+    {Nasdaq Inc.}{Toronto, ON}
+    {Backend Software Engineer}{September 2021 - August 2023}
+    \resumeItemListStart
+      \resumeItem{}
+      {Wrote high-efficiency, high-throughput, low-memory impact Java Spring Boot microservices.}
+      \resumeItem{}
+      {Worked with industry-standard FIX Financial Protocol and other Nasdaq proprietary protocols.}
+      \resumeItem{}
+      {Collaborated with business analysts and specification writers to develop key business logic.}
+      \resumeItem{}
+      {Increased code test coverage to 85\% and improved integration test framework.}
+      \resumeItem{}
+      {Implemented Tailor Made Combinations and other key business logic related to the FIX protocol.}
+      \resumeItem{}
+      {Handled customer issues from worldwide stock exchanges.}
+      \resumeItem{}
+      {Influenced the design of 24x7 and Snapshot Gateway Functionality and implemented in various gateways.}
+      \resumeItem{}
+      {Participated in SCRUM meetings, planning, and all aspects of the Software Development Lifecycle (SDL) within an Agile team.}
+    \resumeItemListEnd
+
+  \resumeSubheading
+  {Praizl Inc. - DMZ 2021}{Toronto, ON}
+  {Full-Stack Software Engineer}{July 2020 - June 2021}
+    \resumeItemListStart
+      \resumeItem{}
+      {Contributed to startup from its inception to the DMZ Class of 2021.}
+      \resumeItem{}
+      {Engineered an ML recommendations engine using multiple datasets to match users to their dream homes accurately.}
+      \resumeItem{}
+      {Provided business intelligence and user management through REST APIs using Flask and Dropwizard.}
+      \resumeItem{}
+      {Built an analytics framework on top of a MongoDB datalake used to process large amounts of data.}
+      \resumeItem{}
+      {Reduced API response time to users by 90\% by implementing an asynchronous job scheduler and in-memory caching layer using Redis.}
+      \resumeItem{}
+      {Performed infrastructure-level DevOps work with containerized deployments on AWS EC2.}
+      \resumeItem{}
+      {Achieved 80\% unit test coverage for critical algorithms.}
+      \resumeItem{}
+      {Collaborated in Agile teams using the Scrum methodology under the supervision of ex-Salesforce, ex-Uber, ex-Microsoft software engineers.}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
+
+% Education
+\section{Education}
+\resumeSubHeadingListStart
+  \resumeSubheading
+    {University of Ottawa}{Ottawa, ON}
+    {BSc. Honours Computer Science}{September 2017 - Current}
+    \resumeItemListStart
+      \resumeItem{Notable Courses}{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
+      \resumeItem{Clubs/Projects}{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
+
+% Projects
+\section{Projects}
+\resumeSubHeadingListStart
+  \resumeSubheading
+  {Uottahack 4}{Ottawa, ON}
+  {Team Winner - Sanitation Station Companion}{February 2021}
+    \resumeItemListStart
+      \resumeItem{}
+      {Winner of Best Hardware Hack}
+      \resumeItem{}
+      {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
+      \resumeItem{}
+      {https://devpost.com/software/sanitation-station-companion}
+    \resumeItemListEnd
+    
+  \resumeSubheading
+  {Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
+  {Team Hackathon Competitor - 3rd Place}{May 2016}
+    \resumeItemListStart
+      \resumeItem{}
+      {Developed a user-focused carbon credit Android application with a SQL backend within 24 hours.}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
+
+%---------HOMELAB--------
+\section{Homelab}
+\resumeSubHeadingListStart
+  \resumeSubheading
+  {I Made a Thing}{It's a Cool Thing}{A Rad Thing}{YO}
+    \resumeItemListStart
+      \resumeItem{}
+      {Bullet point 1 about your Homelab setup or projects.}
+      \resumeItem{}
+      {Bullet point 2 about your Homelab setup or projects.}
+      % Add more bullet points as needed
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
+
+
+\end{document}
+
+
