Kept some commented out stuff, look back and see diffs to take more

--- a/resume.tex
+++ b/resume.tex
@@ -145,6 +145,19 @@
     \resumeItemListEnd
 \resumeSubHeadingListEnd
 
+%	    \resumeSubheading
+%	      {Founderbyte}{Richmond Hill, ON}
+%	      {Full-Stack Software Engineer}{January 2021 - June 2021}
+%	      \resumeItemListStart
+%		  \resumeItem{}
+%	          {Minimized deployment costs by creating an event driven mail service using AWS Lambda and Sendgrid}
+%	        \resumeItem{}
+%	          {Hosted client websites on DigitalOcean with custom mail service. Founderbyte.com, aquaries.co}
+%          \resumeItem{}
+%          {Built online e-commerce store with scheduling system}
+%          \resumeItem{}
+%          {Integrated scheduling widgets into existing website platforms.}
+
 % Education
 \section{Education}
 \resumeSubHeadingListStart
@@ -379,7 +392,39 @@
       \resumeItem{}
       {Developed a user-focused carbon credit Android application with a SQL backend within 24 hours.}
     \resumeItemListEnd
+
+
+%	\resumeSubheading
+%	{YRDSB QUEST 2016}{Richmond Hill, ON}
+%	{Engineering Team Lead}{May 2016}
+%		\resumeItemListStart
+%			\resumeItem{Leadership}
+%			{Lead a team of 3 tech/engineering students, performed requirement elicitation, communicated with other interdisciplinary teams and managed a project schedule to finish well within the timeline. }
+%			\resumeItem{Project Description}
+%			{Array of flowers that individually opened up based on proximity. Developed for mental health awareness.}
+%			\resumeItem{General}
+%			{Worked in interdisciplinary groups to create electronics backed art installations using Arduino and solenoids.}
+%		\resumeItemListEnd
+%	\resumeSubheading
+%	{YRDSB QUEST 2015}{Richmond Hill, ON}
+%	{Engineering Team Lead}{May 2015}
+%		\resumeItemListStart
+%			\resumeItem{Leadership}
+%			{Lead a team of 2 tech/engineering students and managed a project schedule to finish well within the timeline. }
+%			\resumeItem{Project Description}
+%			{Shevrons that when completed by a human circuit play sounds}
+%			\resumeItem{General}
+%			{Worked in interdisciplinary groups to create electronics backed art installations using Raspberry PI and Makey Makey's. .}
+%		\resumeItemListEnd
+
 \resumeSubHeadingListEnd
+
+%---------REFERENCES--------
+%\section{References}
+%	\resumeSubHeadingListStart
+%		\resumeSubheading
+%		{Available Upon Request}{}{}{}
+%	\resumeSubHeadingListEnd
 
 %---------HOMELAB--------
 \section{Homelab}
