updates lets see if it works

--- a/resume.tex
+++ b/resume.tex
@@ -1,9 +1,3 @@
-%-------------------------
-% Resume in Latex
-% Author : Sourabh Bajaj
-% License : MIT
-%------------------------
-
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
@@ -90,11 +84,11 @@
 % Programming Skills
 \section{Programming Skills}
 \resumeItemListStart
-  \resumeItem{Languages/Databases}{: Python, Java, C\#, Rust (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
-  \resumeItem{Frameworks/APIs/Tools}{: Kafka, RabbitMQ, WebRTC, Helm, YAML, JSON}
+  \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
+  \resumeItem{APIs/Tools}{: Kafka, RabbitMQ, DAPR, WebRTC, Helm, YAML, JSON}
   \resumeItem{Frameworks}{: Faust(Streaming), FastAPI, Flask, Spring, Django, Maven}
   \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
-  \resumeItem{Dev Ops}{: AWS, GKS, Gitlab, Ansible, Docker, Kubernetes, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
+  \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
   %\resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog}
 \resumeItemListEnd
 
@@ -130,7 +124,7 @@
       \resumeItem{}
       {Contributed to startup from its inception to the DMZ Class of 2021.}
       \resumeItem{}
-      {Engineered an ML recommendations engine using multiple datasets to match users to their dream homes accurately.}
+      {Engineered an ML recommendations engine using multiple datasets to match users to their dream homes accurately. (Developed Business's core tech)}
       \resumeItem{}
       {Provided business intelligence and user management through REST APIs using Flask and Dropwizard.}
       \resumeItem{}
@@ -153,8 +147,8 @@
     {University of Ottawa}{Ottawa, ON}
     {BSc. Honours Computer Science}{September 2017 - Current}
     \resumeItemListStart
-      \resumeItem{Notable Courses}{Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
-      \resumeItem{Clubs/Projects}{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain}
+      \resumeItem{Notable Courses}{Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
+      \resumeItem{Clubs/Projects}{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, MSA Contributer}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -195,8 +189,6 @@
 %      % Add more bullet points as needed
 %    \resumeItemListEnd
 %\resumeSubHeadingListEnd
-
-
 \end{document}
 
 
