resume tx and tor

--- a/resume_tx.tex
+++ b/resume_tx.tex
@@ -75,9 +75,10 @@
 \begin{tabular*}{\textwidth}{@{}l@{\extracolsep{\fill}}r@{}}
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
   +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
-  {\small "Any sufficiently advanced technology is indistinguishable from magic."}
+  {\small 6725 Branch Creek Dr, Fort Worth TX 76132}
+  %{\small "Any sufficiently advanced technology is indistinguishable from magic."}
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
-  {\small - Arthur C. Clarke}
+  %{\small - Arthur C. Clarke}
 & \href{www.gitlab.com/mershab99}{gitlab.com/mershab99}\\
 \end{tabular*}
 
@@ -85,10 +86,11 @@
 \section{Programming Skills}
 \resumeItemListStart
   \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
-  \resumeItem{APIs/Tools}{: Kafka, RabbitMQ, DAPR, WebRTC, Helm, YAML, JSON}
-  \resumeItem{Frameworks}{: Faust(Streaming), FastAPI, Flask, Spring, Django, Maven}
+  \resumeItem{APIs/Tools}{: Kafka, RabbitMQ, DAPR, WebRTC, Helm, YAML, JSON, Stripe}
+  \resumeItem{Frameworks}{: Spring-Boot, FastAPI, Flask, Django, Maven, Faust}
   \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
-  \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform}
+  \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform, Git}
+  \resumeItem{Soft Skills}{: Detail Oriented, Financial Technology, Market Technology, Business Requirements, Software Sales, Flexible, Team Oriented, Analytical, Systems Thinking, Customer Success}
   %\resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog}
 \resumeItemListEnd
 
@@ -97,24 +99,26 @@
 \resumeSubHeadingListStart
   \resumeSubheading
     {Nasdaq Inc.}{Toronto, ON}
-    {Backend Software Engineer}{September 2021 - August 2023}
+    {Software Engineer, Market Technology}{September 2021 - August 2023}
     \resumeItemListStart
       \resumeItem{}
       {Wrote high-efficiency, high-throughput, low-memory impact Java Spring Boot microservices.}
       \resumeItem{}
       {Worked with industry-standard FIX Financial Protocol and other Nasdaq proprietary protocols.}
       \resumeItem{}
-      {Collaborated with business analysts and specification writers to develop key business logic.}
+      {Collaborated with business analysts and specification writers to develop key business functionality.}
       \resumeItem{}
-      {Increased code test coverage to 85\% and improved integration test framework.}
+      {Worked with cross-team domain experts to debug and verify existing code paths, business functionality, and perform long term planning and forecasting.}
       \resumeItem{}
-      {Implemented Tailor Made Combinations and other key business logic related to the FIX protocol.}
+      {Increased code test coverage to 85\% and improved integration test framework to increase reliability .}
+      \resumeItem{}
+      {Implemented Tailor Made Combinations and other key financial business logic related to the FIX protocol.}
       \resumeItem{}
       {Handled customer issues from worldwide stock exchanges.}
       \resumeItem{}
       {Influenced the design of 24x7 and Snapshot Gateway Functionality and implemented in various gateways.}
       \resumeItem{}
-      {Participated in SCRUM meetings, planning, and all aspects of the Software Development Lifecycle (SDL) within an Agile team.}
+      {Participated in SCRUM meetings, planning, and all aspects of the Software Development Lifecycle (SDLC) within an Agile team.}
     \resumeItemListEnd
 
   \resumeSubheading
