--- a/resume_tor.tex
+++ b/resume_tor.tex
@@ -75,7 +75,7 @@
 \begin{tabular*}{\textwidth}{@{}l@{\extracolsep{\fill}}r@{}}
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
   +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
-  {\small 24 Rollinghill Rd, Richmond Hill, Ontario, Canada, L4E 4C1}
+  {\small Toronto, Canada}
   %{\small "Any sufficiently advanced technology is indistinguishable from magic."}
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
   %{\small - Arthur C. Clarke}
@@ -85,12 +85,12 @@
 % Programming Skills
 \section{Programming Skills}
 \resumeItemListStart
-  \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang (Learning), MongoDB, PostgresSQL, InfluxDB, Redis}
-  \resumeItem{APIs/Tools}{: Kafka, RabbitMQ, DAPR, WebRTC, Helm, YAML, JSON, Stripe}
-  \resumeItem{Frameworks}{: Spring-Boot, FastAPI, Flask, Django, Maven, Faust}
+  \resumeItem{Languages/Databases}{: Python, Java, C\#, Golang, MongoDB, PostgresSQL, InfluxDB, Redis}
+  \resumeItem{APIs/Tools}{: Protobuf/gRPC, Kafka, RabbitMQ, Dapr, WebRTC, Helm, YAML, JSON, Stripe, Ceph, S3}
+  \resumeItem{Frameworks}{: Spring-Boot, FastAPI, Flask, Django, Maven, Faust, Echo, SQLC}
   \resumeItem{IDE/OS}{: Intellij, NeoVIM, Pycharm, VS Code, CentOS (Rocky Linux), Ubuntu, Linux Mint, Manjaro, Proxmox}
-  \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Jenkins, Gitlab Pipelines (CI/CD), Crossplane, Terraform, Git}
-  \resumeItem{Soft Skills}{: Detail Oriented, Financial Technology, Market Technology, Business Requirements, Software Sales, Flexible, Team Oriented, Analytical, Systems Thinking, Customer Success}
+  \resumeItem{Dev Ops}{: Kubernetes, AWS, GKS, K3s, Gitlab, Ansible, Docker, Gitlab Pipelines (CI/CD), Github Actions, Crossplane, Terraform, Git, Prometheus, Grafana}
+  \resumeItem{Soft Skills}{: Detail Oriented, Financial Technology, Market Technology, Business Requirements, Inter and intra team communication, Flexible, Team Oriented, Analytical, Systems Thinking, Customer Success}
   %\resumeItem{AI/Analytics}{: Tensorflow, Pytorch, Grafana, Graylog}
 \resumeItemListEnd
 
@@ -106,15 +106,13 @@
       \resumeItem{}
       {Worked with industry-standard FIX Financial Protocol and other Nasdaq proprietary protocols.}
       \resumeItem{}
-      {Collaborated with business analysts and specification writers to develop key business functionality.}
+      {Worked with cross-team domain experts, business analysts, and specification writers, to debug and verify existing code paths, business functionality, and perform long term planning (AGILE EPIC Level) and Sprint forecasting.}
       \resumeItem{}
-      {Worked with cross-team domain experts to debug and verify existing code paths, business functionality, and perform long term planning and forecasting.}
-      \resumeItem{}
-      {Increased code test coverage to 85\% and improved integration test framework to increase reliability .}
+      {Increased code test coverage to 85\% and improved integration test framework to increase reliability and meet customer SLAs.}
       \resumeItem{}
       {Implemented Tailor Made Combinations and other key financial business logic related to the FIX protocol.}
       \resumeItem{}
-      {Handled customer issues from worldwide stock exchanges.}
+      {Handled customer issues and requests from worldwide stock exchanges.}
       \resumeItem{}
       {Influenced the design of 24x7 and Snapshot Gateway Functionality and implemented in various gateways.}
       \resumeItem{}
@@ -151,34 +149,47 @@
     {University of Ottawa}{Ottawa, ON}
     {BSc. Honours Computer Science}{September 2017 - Current}
     \resumeItemListStart
-      \resumeItem{Notable Courses}{Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
-      \resumeItem{Clubs/Projects}{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, MSA Contributer}
+      \resumeItem{Notable Courses: }{Cryptography, Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
+      \resumeItem{Clubs/Projects: }{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, MSA Contributor}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
 
 % Projects
-%\section{Projects}
-%\resumeSubHeadingListStart
-%  \resumeSubheading
-%  {Uottahack 4}{Ottawa, ON}
-%  {Team Winner - Sanitation Station Companion}{February 2021}
-%    \resumeItemListStart
-%      \resumeItem{}
-%      {Winner of Best Hardware Hack}
-%      \resumeItem{}
-%      {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
-%      \resumeItem{}
-%      {https://devpost.com/software/sanitation-station-companion}
-%    \resumeItemListEnd
-%    
-%  \resumeSubheading
-%  {Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
-%  {Team Hackathon Competitor - 3rd Place}{May 2016}
-%    \resumeItemListStart
-%      \resumeItem{}
-%      {Developed a user-focused carbon credit Android application with a SQL backend within 24 hours.}
-%    \resumeItemListEnd
-%\resumeSubHeadingListEnd
+\section{Projects}
+\resumeSubHeadingListStart
+  \resumeSubheading
+  {Uottahack 4}{Ottawa, ON}
+  {Team Winner - Sanitation Station Companion}{February 2021}
+    \resumeItemListStart
+      \resumeItem{}
+      {Winner of Best Hardware Hack}
+      \resumeItem{}
+      {Deployed AI computer vision application using Raspberry Pi, GKS, and Google Vision API}
+      \resumeItem{}
+      {https://devpost.com/software/sanitation-station-companion}
+    \resumeItemListEnd
+  \resumeSubheading
+  {Ryerson DMZ Climate Hack-To-Action Hackathon}{Toronto, ON}
+  {Team Hackathon Competitor - 3rd Place}{May 2016}
+    \resumeItemListStart
+      \resumeItem{}
+      {Developed a user-focused carbon credit Android application with a SQL backend within 24 hours.}
+    \resumeItemListEnd
+  \resumeSubheading
+  {Open Source Contribution}{Toronto, ON}
+  {OpenFunctions}{June 2024}
+    \resumeItemListStart
+      \resumeItem{}
+      {Exposed lower level APIs for business use cases, as well as improved documentation}
+    \resumeItemListEnd
+  \resumeSubheading
+  {Homelab}{Toronto, ON}
+  {Kubernetes Based Homelab/Private Cloud}{January 2020 -}
+    \resumeItemListStart
+      \resumeItem{}
+      {Built and manage my own private cloud on kubernetes. Complete with public ingress, Ceph based storage, and a private PaaS.}
+    \resumeItemListEnd
+\resumeSubHeadingListEnd
 
 %---------HOMELAB--------
 %\section{Homelab}
