--- a/resume_tor.tex
+++ b/resume_tor.tex
@@ -76,9 +76,8 @@
   \textbf{{\Huge Mershab Issadien}} & \href{mailto:mershab99@gmail.com}{mershab99@gmail.com}\\
   +1416-578-5089 &\href{www.linkedin.com/in/mershab-issadien}{linkedin.com/in/mershab-issadien}\\
   {\small Toronto, Canada}
-  %{\small "Any sufficiently advanced technology is indistinguishable from magic."}
 & \href{www.github.com/mershab99}{github.com/mershab99}\\
-  %{\small - Arthur C. Clarke}
+  {\small ``Any sufficiently advanced technology is indistinguishable from magic." - Arthur C. Clarke}
 & \href{www.gitlab.com/mershab99}{gitlab.com/mershab99}\\
 \end{tabular*}
 
