--- a/resume_tor.tex
+++ b/resume_tor.tex
@@ -146,7 +146,7 @@
 \resumeSubHeadingListStart
   \resumeSubheading
     {University of Ottawa}{Ottawa, ON}
-    {BSc. Honours Computer Science}{September 2017 - Current}
+    {BSc. Honours Computer Science}{September 2017 - December 2024}
     \resumeItemListStart
       \resumeItem{Notable Courses: }{Cryptography, Data Science, Data Structures and Algorithms, Requirements Engineering, Software Engineering, Statistics, Formal Languages, Technical Report Writing}
       \resumeItem{Clubs/Projects: }{UOttawa CSME (Engineering Association), UOttawa Dota 2 B Team Captain, MSA Contributor}
